--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,10 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
-    "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7",
-    "puppeteer": "^23.6.0"
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16"
   }
 }
