--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -28,6 +28,9 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_ENV: production
+      NEXT_PUBLIC_BACKEND_URL: https://your-production-backend-url.com
     steps:
       - name: Checkout
         uses: actions/checkout@v4
